Vista HTML funcion crear y actualizar

--- a/src/app/pages/estudiantes/crear/crear.component.html
+++ b/src/app/pages/estudiantes/crear/crear.component.html
@@ -1,1 +1,53 @@
-<p>crear works!</p>
+<div class="col-lg-12">
+  <nb-card>
+    <nb-card-header *ngIf="modoCreacion">
+      CREAR ESTUDIANTE
+    </nb-card-header>
+    <nb-card-header *ngIf="!modoCreacion">
+      ACTUALIZAR ESTUDIANTE
+    </nb-card-header>
+
+    <nb-card-body>
+      <div class="row">
+        <div class="col-3">
+          <label>Cedula</label>
+        </div>
+        <div class="col-9">
+          <input class="form-control" type="text"
+                [disabled]="!modoCreacion"
+                [(ngModel)]="elEstudiante.cedula">
+           <p *ngIf="intentoEnvio && elEstudiante.cedula==''">Requerido</p>
+        </div>
+      </div>
+      <br>
+      <div class="row">
+        <div class="col-3">
+          <label>Nombre</label>
+        </div>
+        <div class="col-9">
+            <input class="form-control" type="text"
+                  [(ngModel)]="elEstudiante.nombre">
+            <p *ngIf="intentoEnvio && elEstudiante.nombre==''">Requerido</p>
+        </div>
+      </div>
+      <br>
+      <div class="row">
+        <div class="col-3">
+          <label>Apellido</label>
+        </div>
+        <div class="col-9">
+          <input class="form-control" type="text"
+                [(ngModel)]="elEstudiante.apellido">
+          <p *ngIf="intentoEnvio && elEstudiante.apellido==''">Requerido</p>
+        </div>
+      </div>
+      <br>
+      <div class="row">
+        <button *ngIf="modoCreacion" class="btn btn-primary btn-block" (click)="agregar()"> Crear
+        </button>
+        <button *ngIf="!modoCreacion"  class="btn btn-primary btn-block" (click)="editar()"> Actualizar
+        </button>
+      </div>
+    </nb-card-body>
+  </nb-card>
+</div>
